# pangeo-forge-bakery-images

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
binder/: Dockerfile
images/pangeonotebook-2021.05.04_prefect-0.14.7_pangeoforgerecipes-0.3.3/: Dockerfile  requirements.txt
images/pangeonotebook-2021.05.15_prefect-0.14.19_pangeoforgerecipes-0.3.4/: Dockerfile  requirements.txt
images/pangeonotebook-2021.06.05_prefect-0.14.22_pangeoforgerecipes-0.4.0/: Dockerfile  requirements.txt
images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.5.0/: Dockerfile  requirements.txt
images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.0/: requirements.txt
images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-0.6.1/: requirements.txt
images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-236/: Dockerfile
images/pangeonotebook-2021.07.17_prefect-0.14.22_pangeoforgerecipes-executor_refactor/: Dockerfile
images/pangeonotebook-2021.12.02_prefect-0.14.22_pangeoforgerecipes-0.8.2/: Dockerfile
images/pangeonotebook-2021.12.02_prefect-0.14.22_pangeoforgerecipes-0.8.3/: Dockerfile
infrastructure/aws/: cdk.json
infrastructure/aws/cdk/: app.py  bakery_images_stack.py
